--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 						<i class="fa fa-phone"></i>
 						+998 (90) 123-45-67
 					</li>
-					<li>
+					<li class="main-nav__action-li">
 						<button class="button main-nav__action">
 							Start working
 							<i class="fa fa-chevron-right"></i>
