--- a/invan.html
+++ b/invan.html
@@ -13,7 +13,7 @@
 <body>
 
 	<!-- Plus Button -->
-	<button class="plus-button plus-button__animation" id="plus-button" onclick="plusButtonFun()">
+	<button class="plus-button plus-button__animation" id="plus-button">
 		<i class="fa fa-plus"></i>
 	</button>
 	<!-- Plus Button Items -->
@@ -87,6 +87,11 @@
 					</li>
 				</ul>
 			</nav>
+			<!-- Toggler -->
+			<div class="main-header__nav-toggler">
+				<i class="fa fa-hamburger"></i>
+				<i class="fa fa-times"></i>
+			</div>
 		</div>
 		<!-- /container -->
 	</header>
