--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 	<!-- Plus Button -->
-	<button class="plus-button plus-button__animation" id="plus-button" onclick="plusButtonFun()">
+	<button class="plus-button plus-button__animation" id="plus-button">
 		<i class="fa fa-plus"></i>
 	</button>
 	<!-- Plus Button Items -->
@@ -84,6 +84,11 @@
 					</li>
 				</ul>
 			</nav>
+			<!-- Toggler -->
+			<div class="main-header__nav-toggler">
+				<i class="fa fa-hamburger"></i>
+				<i class="fa fa-times"></i>
+			</div>
 		</div>
 		<!-- /container -->
 	</header>
@@ -442,42 +447,42 @@
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-1.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-2.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-3.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-4.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-1.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-4.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-3.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
 				<div class="partners-section__item">
-					<img src="images/logo.png" alt="Partner Item">
+					<img src="images/group-2.png" alt="Partner Item">
 				</div>
 				<!-- /partners section item -->
 				<!-- Partners Section Item -->
